--- a/pipeline/pom.xml
+++ b/pipeline/pom.xml
@@ -29,5 +29,11 @@
       <version>2.2.1</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-core_2.11</artifactId>
+      <version>2.2.1</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 </project>
