--- a/sprint2_wolfgang/test.ini
+++ b/sprint2_wolfgang/test.ini
@@ -1,6 +1,7 @@
 [APP]
     log_start=true
     log_done=true
-    batch_duration=1
-    num_db_partitions=10
+    batch_duration=2
+    num_db_partitions=20
+    num_workers=20
 
