--- a/pipeline/test.ini
+++ b/pipeline/test.ini
@@ -3,8 +3,9 @@
     log_done=false
     log_request=false
     batch_duration=2
+    top_n=20
     num_db_partitions=60
-    num_workers=20
-    num_executors=20
+    num_workers=18
+    num_executors=18
     num_executor_cores=2
 
