--- a/pipeline/pom.xml
+++ b/pipeline/pom.xml
@@ -12,35 +12,39 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.scala</groupId>
-            <artifactId>scala</artifactId>
-            <version>2.11</version>
-            <scope>system</scope>
-            <systemPath>/usr/lib/spark/jars/scala-library-2.11.8.jar</systemPath>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>2.11.8</version>
+            <scope>provided</scope>
+            <!--scope>system</scope>
+            <systemPath>/usr/lib/spark/jars/scala-library-2.11.8.jar</systemPath-->
         </dependency>
 
         <dependency>
-            <groupId>org.apache.spark.core</groupId>
-            <artifactId>spark-core</artifactId>
-            <version>2.11</version>
-            <scope>system</scope>
-            <systemPath>/usr/lib/spark/jars/spark-core_2.11-2.2.0.jar</systemPath>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_2.11</artifactId>
+            <version>2.1.1</version>
+            <scope>provided</scope>
+            <!--scope>system</scope>
+            <systemPath>/usr/lib/spark/jars/spark-core_2.11-2.2.0.jar</systemPath-->
         </dependency>
 
         <dependency>
-            <groupId>org.apache.spark.streaming</groupId>
-            <artifactId>spark-streaming</artifactId>
-            <version>2.11</version>
-            <scope>system</scope>
-            <systemPath>/usr/lib/spark/jars/spark-streaming_2.11-2.2.0.jar</systemPath>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming_2.11</artifactId>
+            <version>2.1.1</version>
+            <scope>provided</scope>
+            <!--scope>system</scope>
+            <systemPath>/usr/lib/spark/jars/spark-streaming_2.11-2.2.0.jar</systemPath-->
         </dependency>
 
         <dependency>
             <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop</artifactId>
+            <artifactId>hadoop-common</artifactId>
             <version>2.8.2</version>
-            <scope>system</scope>
-            <systemPath>/usr/lib/hadoop/hadoop-common-2.8.2.jar</systemPath>
+            <scope>provided</scope>
+            <!--scope>system</scope>
+            <systemPath>/usr/lib/hadoop/hadoop-common-2.8.2.jar</systemPath-->
         </dependency>
 
         <dependency>
@@ -68,6 +72,15 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.21.0</version>
+                <configuration>
+                    <skipTests>${skipTests}</skipTests>
                 </configuration>
             </plugin>
 
