refactored and with pubsub compiling but not yet working, no errors but also no messages arrive

--- a/pipeline/test.ini
+++ b/pipeline/test.ini
@@ -1,11 +1,12 @@
 [APP]
     log_start=false
     log_done=false
-    log_request=false
+    log_request=true
     batch_duration=2
     top_n=20
     num_db_partitions=60
     num_workers=18
     num_executors=18
     num_executor_cores=2
+    project_id=ncbi-sandbox-blast
 
