--- a/pipeline/pom.xml
+++ b/pipeline/pom.xml
@@ -14,10 +14,17 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.11.8</version>
+            <version>2.11.11</version>
             <scope>provided</scope>
             <!--scope>system</scope>
             <systemPath>/usr/lib/spark/jars/scala-library-2.11.8.jar</systemPath-->
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.11</artifactId>
+            <version>2.2.0</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -58,6 +65,14 @@
             <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-storage</artifactId>
             <version>1.12.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.cloud.bigdataoss</groupId>
+            <artifactId>spark-pubsub</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${env.HOME}/bigdata-interop/pubsub/target/spark-pubsub-0.1.0-SNAPSHOT-shaded.jar</systemPath>
         </dependency>
 
     </dependencies>
