--- a/lib_builder/log4j.properties
+++ b/lib_builder/log4j.properties
@@ -16,4 +16,4 @@ log4j.appender.sparkfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.sparkfile.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c{1}: %m%n
 
 log4j.logger.gov.nih.nlm.ncbi.blastjni.BLAST_LIB=INFO, tmpfile, sparkfile
-log4j.logger.gov.nih.nlm.ncbi.blastjni.BLAST_TEST=TRACE, tmpfile
+log4j.logger.gov.nih.nlm.ncbi.blastjni.BLAST_TEST=INFO, tmpfile
