with json parsing of request from pubsub

--- a/pipeline/test.ini
+++ b/pipeline/test.ini
@@ -9,4 +9,6 @@
     num_executors=18
     num_executor_cores=2
     project_id=ncbi-sandbox-blast
+    subscript_id=run-subscript-integration
+    db_location=/home/raetzw/blast/db
 
