settings now optional as json-file

--- a/pipeline/test.ini
+++ b/pipeline/test.ini
@@ -8,6 +8,7 @@
     num_workers=18
     num_executors=18
     num_executor_cores=2
+    trigger_port=0
     project_id=ncbi-sandbox-blast
     subscript_id=run-subscript-integration
     db_location=/home/raetzw/blast/db
