--- a/lib_builder/log4j.properties
+++ b/lib_builder/log4j.properties
@@ -8,12 +8,12 @@ log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.tmpfile=org.apache.log4j.FileAppender
 log4j.appender.tmpfile.File=/tmp/blastjni.${user.name}.log
 log4j.appender.tmpfile.layout=org.apache.log4j.PatternLayout
-log4j.appender.tmpfile.layout.ConversionPattern=%p %m%n
+log4j.appender.tmpfile.layout.ConversionPattern=[%p] %m%n
 
 log4j.appender.sparkfile=org.apache.log4j.FileAppender
 log4j.appender.sparkfile.File=/var/log/spark/blastjni.${user.name}.log
 log4j.appender.sparkfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.sparkfile.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c{1}: %m%n
-
-log4j.logger.gov.nih.nlm.ncbi.blastjni.BLAST_LIB=INFO, tmpfile, sparkfile
-log4j.logger.gov.nih.nlm.ncbi.blastjni.BLAST_TEST=INFO, tmpfile
+# Spark/JNI layers will further restrict on a per query basis
+log4j.logger.gov.nih.nlm.ncbi.blastjni.BLAST_LIB=DEBUG, tmpfile, sparkfile
+log4j.logger.gov.nih.nlm.ncbi.blastjni.BLAST_TEST=TRACE, tmpfile
