--- a/pipeline/pom.xml
+++ b/pipeline/pom.xml
@@ -67,6 +67,12 @@
             <version>1.12.0</version>
         </dependency>
 
+        <!--dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency-->
+
         <dependency>
             <groupId>com.google.cloud.bigdataoss</groupId>
             <artifactId>spark-pubsub</artifactId>
