--- a/pipeline/pom.xml
+++ b/pipeline/pom.xml
@@ -78,7 +78,7 @@
             <artifactId>spark-pubsub</artifactId>
             <version>0.1.0-SNAPSHOT</version>
             <scope>system</scope>
-            <systemPath>${env.HOME}/bigdata-interop/pubsub/target/spark-pubsub-0.1.0-SNAPSHOT-shaded.jar</systemPath>
+            <systemPath>${project.basedir}/bigdata-interop/pubsub/target/spark-pubsub-0.1.0-SNAPSHOT-shaded.jar</systemPath>
         </dependency>
 
     </dependencies>
