--- a/lib_builder/log4j.properties
+++ b/lib_builder/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootCategory=TRACE, console
+log4j.rootCategory=DEBUG, console
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.target=System.err
@@ -15,5 +15,7 @@ log4j.appender.sparkfile.File=/var/log/spark/blastjni.${user.name}.log
 log4j.appender.sparkfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.sparkfile.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c{1}: %m%n
 # Spark/JNI layers will further restrict on a per query basis
-log4j.logger.gov.nih.nlm.ncbi.blastjni.BLAST_LIB=DEBUG, tmpfile, sparkfile
-log4j.logger.gov.nih.nlm.ncbi.blastjni.BLAST_TEST=TRACE, tmpfile
+log4j.logger.gov.nih.nlm.ncbi.blastjni.BLAST_TEST=DEBUG, tmpfile
+log4j.logger.gov.nih.nlm.ncbi.blastjni.BLAST_LIB=DEBUG, tmpfile
+#, sparkfile
+log4j.logger.gov.nih.nlm.ncbi.blastjni.BLAST_BENCH=DEBUG, tmpfile
