--- a/pipeline/pom.xml
+++ b/pipeline/pom.xml
@@ -60,7 +60,13 @@
     <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-storage</artifactId>
-      <version>1.12.0</version>
+      <version>1.26.0</version>
+    </dependency>
+    <!-- cloud-storage seems to require this -->
+    <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>23.0</version>
     </dependency>
     <dependency>
       <groupId>com.google.cloud.bigdataoss</groupId>
