--- a/pipeline/pom.xml
+++ b/pipeline/pom.xml
@@ -25,6 +25,11 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>gov.nih.nlm.ncbi.blast</groupId>
+      <artifactId>blast-gcp-status-tracker</artifactId>
+      <version>0.3.4</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.11</artifactId>
       <version>2.1.1</version>
