--- a/experiment6/pom.xml
+++ b/experiment6/pom.xml
@@ -56,17 +56,47 @@
             <systemPath>/usr/lib/hadoop/hadoop-common-2.8.2.jar</systemPath-->
     </dependency>
 
-    <dependency>
+    <!--dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-pom</artifactId>
       <version>0.37.0-alpha</version>
       <type>pom</type>
-    </dependency>
+    </dependency-->
 
     <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-storage</artifactId>
       <version>1.12.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-pubsub</artifactId>
+      <version>v1-rev385-1.22.0</version>
+    </dependency>
+
+    <dependency>
+        <groupId>com.google.apis</groupId>
+        <artifactId>google-api-services-storage</artifactId>
+        <version>v1-rev129-1.22.0</version>
+    </dependency>
+
+    <dependency>
+        <groupId>com.google.api-client</groupId>
+        <artifactId>google-api-client</artifactId>
+        <version>1.22.0</version>
+    </dependency>
+
+    <dependency>
+        <groupId>com.google.http-client</groupId>
+        <artifactId>google-http-client-jackson2</artifactId>
+        <version>1.22.0</version>
+    </dependency>
+
+    <dependency>
+        <groupId>com.google.http-client</groupId>
+        <artifactId>google-http-client</artifactId>
+        <version>1.22.0</version>
     </dependency>
 
   </dependencies>
