Need gcloud in image

--- a/pipeline/Dockerfile
+++ b/pipeline/Dockerfile
@@ -12,6 +12,11 @@ FROM debian:8
 #RUN mvn -q package
 ##################################
 
+RUN export CLOUD_SDK_REPO="cloud-sdk-$(lsb_release -c -s)" && \
+    echo "deb http://packages.cloud.google.com/apt $CLOUD_SDK_REPO main" | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list && \
+    curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add - && \
+    apt-get update -y && apt-get install google-cloud-sdk -y
+
 COPY ./ ./
 #COPY libblastjni.so libblastjni.so
 #COPY sparkblast-1-jar-with-dependencies.jar \
