--- a/experiment6/pom.xml
+++ b/experiment6/pom.xml
@@ -30,6 +30,12 @@
     </dependency>
 
     <dependency>
+      <groupId>gov.nih.nlm.ncbi.blast</groupId>
+      <artifactId>blast-gcp-status-tracker</artifactId>
+      <version>0.3.12</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.11</artifactId>
       <version>2.1.1</version>
