Move topN to separate class

--- a/experiment_mike/log4j.properties
+++ b/experiment_mike/log4j.properties
@@ -17,4 +17,5 @@ log4j.appender.sparkfile.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p : %m%
 # Spark/JNI layers will further restrict on a per query basis
 log4j.logger.gov.nih.nlm.ncbi.blastjni=DEBUG, tmpfile, sparkfile
 log4j.logger.gov.nih.nlm.ncbi.blastjni.BLAST_BENCH=DEBUG, tmpfile
+log4j.logger.gov.nih.nlm.ncbi.blastjni.BLAST_DRIVER=INFO, tmpfile
 log4j.logger.gov.nih.nlm.ncbi.blastjni.BLAST_TEST=INFO, tmpfile
