--- a/pipeline/pom.xml
+++ b/pipeline/pom.xml
@@ -4,9 +4,6 @@
   <groupId>gov.nih.nlm.ncbi.sparkblast</groupId>
   <artifactId>sparkblast</artifactId>
   <version>1</version>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
   <dependencies>
     <dependency>
       <groupId>com.google.code.gson</groupId>
@@ -51,39 +48,41 @@
       <!--scope>system</scope>
             <systemPath>/usr/lib/hadoop/hadoop-common-2.8.2.jar</systemPath-->
     </dependency>
-    <dependency>
+    <!--dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-pom</artifactId>
       <version>0.37.0-alpha</version>
       <type>pom</type>
-    </dependency>
+    </dependency-->
     <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-storage</artifactId>
-      <version>1.26.0</version>
+      <version>1.12.0</version>
     </dependency>
-    <!-- cloud-storage seems to require this -->
     <dependency>
-        <groupId>com.google.guava</groupId>
-        <artifactId>guava</artifactId>
-        <version>23.0</version>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-pubsub</artifactId>
+      <version>v1-rev385-1.22.0</version>
     </dependency>
-    <!--
     <dependency>
-      <groupId>com.google.cloud.bigdataoss</groupId>
-      <artifactId>spark-pubsub</artifactId>
-      <version>0.1.0-SNAPSHOT</version>
-      <scope>system</scope>
-      <systemPath>${project.basedir}/bigdata-interop/pubsub/target/spark-pubsub-0.1.0-SNAPSHOT-shaded.jar</systemPath>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-storage</artifactId>
+      <version>v1-rev129-1.22.0</version>
     </dependency>
-    -->
-    <!-- FIX: Apache Log4J 1.2 was EOL'ed on 8/2015, but Spark still uses it,
-         so shall we. -->
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
-      <!-- <scope>provided</scope> -->
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client</artifactId>
+      <version>1.22.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.http-client</groupId>
+      <artifactId>google-http-client-jackson2</artifactId>
+      <version>1.22.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.http-client</groupId>
+      <artifactId>google-http-client</artifactId>
+      <version>1.22.0</version>
     </dependency>
   </dependencies>
   <build>
@@ -91,34 +90,11 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.3</version>
+        <version>3.1</version>
         <configuration>
-          <forceJavacCompilerUse>true</forceJavacCompilerUse>
-          <compilerId>javac-with-errorprone</compilerId>
           <source>1.8</source>
           <target>1.8</target>
-          <compilerArgs>
-            <arg>-Xlint:all</arg>
-            <arg>-Xlint:-path</arg>
-            <arg>-Xlint:-serial</arg>
-          </compilerArgs>
-          <showWarnings>true</showWarnings>
-          <encoding>UTF-8</encoding>
         </configuration>
-        <dependencies>
-          <dependency>
-            <groupId>org.codehaus.plexus</groupId>
-            <artifactId>plexus-compiler-javac-errorprone</artifactId>
-            <version>2.8.3</version>
-          </dependency>
-          <!-- override plexus-compiler-javac-errorprone's dependency on
-             Error Prone with the latest version -->
-          <dependency>
-            <groupId>com.google.errorprone</groupId>
-            <artifactId>error_prone_core</artifactId>
-            <version>2.3.1</version>
-          </dependency>
-        </dependencies>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -148,38 +124,4 @@
       </plugin>
     </plugins>
   </build>
-  <reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>3.0.0</version>
-        <reportSets>
-          <reportSet>
-            <reports>
-              <report>checkstyle</report>
-            </reports>
-          </reportSet>
-        </reportSets>
-        <configuration>
-          <configLocation>google_checks.xml</configLocation>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-pmd-plugin</artifactId>
-        <version>3.9.0</version>
-        <configuration>
-          <format>html</format>
-        </configuration>
-        <reportSets>
-          <reportSet>
-            <reports>
-              <report>pmd</report>
-              <report>cpd</report>
-            </reports>
-          </reportSet>
-        </reportSets>
-      </plugin>
-    </plugins>
-  </reporting>
 </project>
