--- a/experiment_dataset/pom.xml
+++ b/experiment_dataset/pom.xml
@@ -85,6 +85,11 @@
     </dependency>
     <dependency>
         <groupId>io.opencensus</groupId>
+        <artifactId>opencensus-exporter-trace-logging</artifactId>
+        <version>0.13.2</version>
+    </dependency>
+    <dependency>
+        <groupId>io.opencensus</groupId>
         <artifactId>opencensus-impl</artifactId>
         <version>0.13.2</version>
         <scope>runtime</scope>
