--- a/experiment_dataset2/pom.xml
+++ b/experiment_dataset2/pom.xml
@@ -65,8 +65,13 @@
     <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-storage</artifactId>
-      <version>1.26.0</version>
-    </dependency>
+      <version>1.31.0</version>
+  </dependency>
+  <dependency>
+        <groupId>com.google.cloud</groupId>
+          <artifactId>google-cloud-trace</artifactId>
+            <version>0.49.0-beta</version>
+        </dependency>
     <!-- cloud-storage seems to require this -->
     <dependency>
       <groupId>com.google.guava</groupId>
