--- a/experiment_dataset2/pom.xml
+++ b/experiment_dataset2/pom.xml
@@ -87,19 +87,24 @@
         <!-- <scope>provided</scope> -->
     </dependency>
     <dependency>
+        <groupId>com.google.cloud</groupId>
+        <artifactId>google-cloud-logging-logback</artifactId>
+        <version>0.49.0-alpha</version>
+    </dependency>
+    <dependency>
         <groupId>io.opencensus</groupId>
         <artifactId>opencensus-api</artifactId>
-        <version>0.12.2</version>
+        <version>0.13.2</version>
     </dependency>
     <dependency>
         <groupId>io.opencensus</groupId>
         <artifactId>opencensus-exporter-trace-stackdriver</artifactId>
-        <version>0.12.2</version>
+        <version>0.13.2</version>
     </dependency>
     <dependency>
         <groupId>io.opencensus</groupId>
         <artifactId>opencensus-impl</artifactId>
-        <version>0.12.2</version>
+        <version>0.13.2</version>
         <scope>runtime</scope>
     </dependency>
     <dependency>
