--- a/pipeline/cloudbuild.yaml
+++ b/pipeline/cloudbuild.yaml
@@ -1,8 +1,8 @@
 steps:
 - name: gcr.io/cloud-builders/gsutil
-  args: ['cp', 'gs://ncbi-build-artifacts/libblastjni.so', '${_PATH}/libblastjni.so']
+  args: ['cp', 'gs://ncbi-build-artifacts/libblastjni.${_TAG}.so', '${_PATH}/libblastjni.so']
 - name: gcr.io/cloud-builders/gsutil
-  args: ['cp', 'gs://ncbi-build-artifacts/sparkblast-exp6-jar-with-dependencies.jar', '${_PATH}/sparkblast.jar']
+  args: ['cp', 'gs://ncbi-build-artifacts/sparkblast-1-jar-with-dependencies.${_TAG}.jar', '${_PATH}/sparkblast.jar']
 - name: 'gcr.io/cloud-builders/docker'
   args: [ 'build', '--tag', 'us.gcr.io/$PROJECT_ID/${_IMAGE_NAME}:${COMMIT_SHA}${_TAG}', '${_PATH}' ]
 substitutions:
