--- a/experiment_dataset2/pom.xml
+++ b/experiment_dataset2/pom.xml
@@ -52,7 +52,7 @@
         <groupId>org.apache.hadoop</groupId>
         <artifactId>hadoop-common</artifactId>
         <version>2.8.2</version>
-        <scope>provided</scope>
+        <!--        <scope>provided</scope> -->
         <!--scope>system</scope>
             <systemPath>/usr/lib/hadoop/hadoop-common-2.8.2.jar</systemPath-->
     </dependency>
@@ -141,11 +141,13 @@
                         </artifactSet>
                         <minimizeJar>false</minimizeJar>
                         <relocations>
-                            <relocation><!-- Shade guava -->
+                            <relocation>
+                                <!-- Shade guava -->
                                 <pattern>com.google.common</pattern>
                                 <shadedPattern>repackaged.com.google.common</shadedPattern>
                             </relocation>
-                            <relocation><!-- Shade protobuf -->
+                            <relocation>
+                                <!-- Shade protobuf -->
                                 <pattern>com.google.protobuf</pattern>
                                 <shadedPattern>repackaged.com.google.protobuf</shadedPattern>
                             </relocation>
@@ -155,7 +157,6 @@
                 </execution>
             </executions>
         </plugin>
-
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
