--- a/pipeline/cloudbuild.yaml
+++ b/pipeline/cloudbuild.yaml
@@ -2,7 +2,7 @@
 
 steps:
 - name: gcr.io/cloud-builders/gsutil
-  args: ['cp', 'gs://ncbi-build-artifacts/sparkblast-1-jar-with-dependencies.${_VERSION}.jar', '${_PATH}/sparkblast.jar']
+  args: ['cp', '${_SPARKBLAST_JAR}', '${_PATH}/sparkblast.jar']
 
 # build docker container once all packages have been downloaded
 - name: 'gcr.io/cloud-builders/docker'
@@ -13,6 +13,7 @@ substitutions:
   _PATH: pipeline
   _IMAGE_NAME: blast-pipeline
   _VERSION:
+  _SPARKBLAST_JAR: "gs://ncbi-build-artifacts/sparkblast-1-jar-with-dependencies.20180705.jar"
 
 images:
   - 'us.gcr.io/${PROJECT_ID}/${_IMAGE_NAME}:${COMMIT_SHA}${_VERSION}'
