--- a/experiment6/pom.xml
+++ b/experiment6/pom.xml
@@ -84,6 +84,11 @@
       <artifactId>google-http-client</artifactId>
       <version>1.22.0</version>
     </dependency>
+    <dependency>
+        <groupId>gov.nih.nlm.ncbi.blast</groupId>
+        <artifactId>blast-gcp-status-tracker</artifactId>
+        <version>0.3.4</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
