--- a/pipeline/pom.xml
+++ b/pipeline/pom.xml
@@ -4,12 +4,15 @@
   <groupId>gov.nih.nlm.ncbi.sparkblast</groupId>
   <artifactId>sparkblast</artifactId>
   <version>1</version>
+
   <dependencies>
+
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.2.4</version>
     </dependency>
+
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
@@ -18,12 +21,14 @@
       <!--scope>system</scope>
             <systemPath>/usr/lib/spark/jars/scala-library-2.11.8.jar</systemPath-->
     </dependency>
+
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-sql_2.11</artifactId>
       <version>2.2.0</version>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.11</artifactId>
@@ -32,6 +37,7 @@
       <!--scope>system</scope>
             <systemPath>/usr/lib/spark/jars/spark-core_2.11-2.2.0.jar</systemPath-->
     </dependency>
+
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-streaming_2.11</artifactId>
@@ -40,6 +46,7 @@
       <!--scope>system</scope>
             <systemPath>/usr/lib/spark/jars/spark-streaming_2.11-2.2.0.jar</systemPath-->
     </dependency>
+
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-common</artifactId>
@@ -48,43 +55,64 @@
       <!--scope>system</scope>
             <systemPath>/usr/lib/hadoop/hadoop-common-2.8.2.jar</systemPath-->
     </dependency>
+
     <!--dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-pom</artifactId>
       <version>0.37.0-alpha</version>
       <type>pom</type>
     </dependency-->
+
     <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-storage</artifactId>
       <version>1.12.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.google.apis</groupId>
       <artifactId>google-api-services-pubsub</artifactId>
       <version>v1-rev385-1.22.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.google.apis</groupId>
       <artifactId>google-api-services-storage</artifactId>
       <version>v1-rev129-1.22.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.google.api-client</groupId>
       <artifactId>google-api-client</artifactId>
       <version>1.22.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.google.http-client</groupId>
       <artifactId>google-http-client-jackson2</artifactId>
       <version>1.22.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.google.http-client</groupId>
       <artifactId>google-http-client</artifactId>
       <version>1.22.0</version>
     </dependency>
+
+    <dependency>
+        <groupId>com.google.apis</groupId>
+        <artifactId>google-api-services-logging</artifactId>
+        <version>v2-rev587-1.21.0</version>
+    </dependency>
+
+    <dependency>
+        <groupId>com.googlecode.json-simple</groupId>
+        <artifactId>json-simple</artifactId>
+        <version>1.1.1</version>
+    </dependency>
+
   </dependencies>
+
   <build>
     <plugins>
       <plugin>
