--- a/experiment6/pom.xml
+++ b/experiment6/pom.xml
@@ -27,7 +27,7 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.11</artifactId>
-      <version>2.1.1</version>
+      <version>2.X.X</version>
       <scope>provided</scope>
       <!--scope>system</scope>
             <systemPath>/usr/lib/spark/jars/spark-core_2.11-2.2.0.jar</systemPath-->
@@ -35,7 +35,7 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-streaming_2.11</artifactId>
-      <version>2.1.1</version>
+      <version>2.X.X</version>
       <scope>provided</scope>
       <!--scope>system</scope>
             <systemPath>/usr/lib/spark/jars/spark-streaming_2.11-2.2.0.jar</systemPath-->
