--- a/pipeline/pom.xml
+++ b/pipeline/pom.xml
@@ -135,7 +135,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.21.0</version>
-        <configuration>
+	<configuration>
+	  <useSystemClassLoader>false</useSystemClassLoader>
           <skipTests>${skipTests}</skipTests>
         </configuration>
       </plugin>
