--- a/blast_cluster/pom.xml
+++ b/blast_cluster/pom.xml
@@ -115,6 +115,7 @@
 
   <build>
     <plugins>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -124,6 +125,7 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -132,6 +134,7 @@
           <skipTests>${skipTests}</skipTests>
         </configuration>
       </plugin>
+
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <version>3.1.0</version>
@@ -150,6 +153,15 @@
           </execution>
         </executions>
       </plugin>
+
+	  <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-javadoc-plugin</artifactId>
+		<configuration>
+			<show>private</show>
+		</configuration>
+      </plugin>	
+
     </plugins>
   </build>
 </project>
