--- a/pipeline/pom.xml
+++ b/pipeline/pom.xml
@@ -168,15 +168,14 @@
           </execution>
         </executions>
       </plugin>
-
-	  <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-javadoc-plugin</artifactId>
-		<configuration>
-			<show>private</show>
-		</configuration>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <version>3.0.1</version>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+            <show>private</show>
+        </configuration>
       </plugin>
-
     </plugins>
   </build>
 </project>
