--- a/pipeline/pom.xml
+++ b/pipeline/pom.xml
@@ -174,6 +174,7 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
             <show>private</show>
+            <doclint>none</doclint>
         </configuration>
       </plugin>
     </plugins>
